Added barebones for menu functionality

--- a/game/index.html
+++ b/game/index.html
@@ -15,5 +15,7 @@
     <script src="Player.js"></script>
     <script src="Platform.js"></script>
     <script src="Goal.js"></script>
+    <script src="Menu.js"></script>
+    <script src="Button.js"></script>
   </body>
 </html>
