--- a/game/index.html
+++ b/game/index.html
@@ -4,7 +4,8 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.10/lib/p5.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.10/lib/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
+    <title>Super Dukes</title>
 
   </head>
   <body>
@@ -13,9 +14,10 @@
     <script src="sketch.js"></script>
     <script src="Level.js"></script>
     <script src="Player.js"></script>
-    <script src="Platform.js"></script>
     <script src="Goal.js"></script>
     <script src="Menu.js"></script>
     <script src="Button.js"></script>
+    <script src="Dukedog.js"></script>
+
   </body>
 </html>
