Add Platform.js script to index.html sprint 3
Was missing from the index in github should've been there since sprint 1

--- a/game/index.html
+++ b/game/index.html
@@ -13,11 +13,11 @@
     </main>
     <script src="sketch.js"></script>
     <script src="Level.js"></script>
+    <script src="Platform.js"></script>
     <script src="Player.js"></script>
     <script src="Goal.js"></script>
     <script src="Menu.js"></script>
     <script src="Button.js"></script>
     <script src="Dukedog.js"></script>
-
   </body>
 </html>
