--- a/game/index.html
+++ b/game/index.html
@@ -19,5 +19,6 @@
     <script src="Menu.js"></script>
     <script src="Button.js"></script>
     <script src="Dukedog.js"></script>
+    <script src="HealthSystem.js"></script>
   </body>
 </html>
