Bug fixes, sprint 3

--- a/game/index.html
+++ b/game/index.html
@@ -20,5 +20,6 @@
     <script src="Button.js"></script>
     <script src="Dukedog.js"></script>
     <script src="HealthSystem.js"></script>
+    <script src="GameOverMenu.js"></script>
   </body>
 </html>
