[OAdd invincibility power-up, tophat duck, and Game Over updates

git push


git push



--- a/game/index.html
+++ b/game/index.html
@@ -19,6 +19,8 @@
     <script src="Menu.js"></script>
     <script src="Button.js"></script>
     <script src="Dukedog.js"></script>
+    <script src="GameOverButton.js"></script>
+    <script src="GameOverMenu.js"></script>
     <script src="HealthSystem.js"></script>
   </body>
 </html>
