buggy but progress, sprint3

--- a/game/index.html
+++ b/game/index.html
@@ -22,5 +22,6 @@
     <script src="GameOverButton.js"></script>
     <script src="HealthSystem.js"></script>
     <script src="sunglassDuck.js"></script>
+    <script src="TophatDuck.js"></script>
   </body>
 </html>
