Sprint 4 added starship subclass
Makes it easier to modify starship

--- a/game/index.html
+++ b/game/index.html
@@ -22,5 +22,6 @@
     <script src="HealthSystem.js"></script>
     <script src="sunglassDuck.js"></script>
     <script src="TophatDuck.js"></script>
+    <script src="Starship.js"></script>
   </body>
 </html>
